feature(signup): Users can register as patron or author
